--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -1,8 +1,8 @@
-<section *ngIf="employe; else noEmploye">
-  <carte [employe]="employe" (personDelete)="delete($event)"></carte>
+<section *ngIf="music; else noMusique">
+  <carte [music]="music" (personDelete)="delete($event)"></carte>
 </section>
 
-<ng-template #noEmploye>
+<ng-template #noMusique>
   <span>Aucuns employés actuellement en base</span>
 </ng-template>
 
