--- a/src/app/drawer/drawer.component.html
+++ b/src/app/drawer/drawer.component.html
@@ -5,13 +5,9 @@
         <span class="full-width">{{ 'drawer.accueil' | translate }}</span>
         <mat-icon mat-list-icon>home</mat-icon>
       </mat-list-item>
-      <mat-list-item [routerLink]="['/listPersonnel']">
+      <mat-list-item [routerLink]="['/listMusics']">
         <span class="full-width">{{ 'drawer.listPersonnel' | translate }}</span>
         <mat-icon mat-list-icon>list_alt</mat-icon>
-      </mat-list-item>
-      <mat-list-item [routerLink]="['/graph']">
-        <span class="full-width">{{ 'drawer.stats' | translate }}</span>
-        <mat-icon mat-list-icon>bar_chart</mat-icon>
       </mat-list-item>
       <mat-list-item [routerLink]="['/contact']">
         <span class="full-width">{{ 'drawer.contact' | translate }}</span>
