--- a/src/app/list-personnel/list-music.component.html
+++ b/src/app/list-personnel/list-music.component.html
@@ -1,26 +1,24 @@
-<barre-de-recherche [personnel]="personnel" (typing)="personnelFiltered($event)"></barre-de-recherche>
-
 <section>
   <span>
-    {personnel?.length, plural,
+    {musics?.length, plural,
       =0 {Aucun employé trouvé}
       =1 {1 Employé trouvé}
-      other {{{ personnel?.length }} Employés trouvés}}
+      other {{{ musics?.length }} Employés trouvés}}
   </span>
 </section>
 
 <section [ngSwitch]="view">
   <section *ngSwitchCase="'card'">
-    <carte [employe]="employe" (personDelete)="delete($event)" (personUpdate)="update($event)" *ngFor="let employe of personnel" ></carte>
+    <carte [music]="music" (personDelete)="delete($event)" (personUpdate)="update($event)" *ngFor="let music of musics" ></carte>
   </section>
 
   <section *ngSwitchCase="'list'">
     <mat-list>
-      <mat-list-item *ngFor="let employe of personnel" class="mat-whiteframe-2dp mat-card">
-        <img mat-list-avatar src="{{ employe.photo }}" alt="Avatar de l'employé"/>
-        <h3 mat-line>{{ employe.prenom }} {{ employe.nom }} </h3>
+      <mat-list-item *ngFor="let music of musics" class="mat-whiteframe-2dp mat-card">
+        <img mat-list-avatar src="{{ music.picture }}" alt="Avatar de l'employé"/>
+        <h3 mat-line>{{ music.title }} - {{ music.artist }} ({{ music.date }}) </h3>
         <p mat-line>
-          <span> {{ employe.email }} </span> — <span>{{ employe.telephone }} </span>
+          <span> {{ music.album }} </span> — <span> {{ music.duration }} </span>
         </p>
       </mat-list-item>
     </mat-list>
