--- a/src/app/partage/formulaire/formulaire.component.html
+++ b/src/app/partage/formulaire/formulaire.component.html
@@ -1,50 +1,52 @@
 <mat-card class="mat-whiteframe-2dp">
-  <mat-card-title> <span>➕ Créer un(e) employé(e)</span> </mat-card-title>
+  <mat-card-title> <span>➕ Créer une musique</span> </mat-card-title>
 
   <mat-card-content>
     <form novalidate [formGroup]="form">
 
-      <p [class.errors]="form.get('nom')!.invalid && (form.get('nom')!.dirty || form.get('nom')!.touched)">
+      <p [class.errors]="form.get('title')!.invalid && (form.get('title')!.dirty || form.get('title')!.touched)">
         <mat-form-field class="name" >
-          <mat-label>Nom</mat-label>
-          <input formControlName="nom" name="nom" matInput placeholder="Ex: De LaMarre" required/>
-          <mat-error *ngIf="form.get('nom')!.dirty && form.get('nom')!.errors?.['required']"><br />Le nom est obligatoire</mat-error>
-          <mat-error *ngIf="form.get('nom')!.dirty && form.get('nom')!.errors?.['minlength']"><br />Le nom doit avoir au moins 2 caractères </mat-error>
+          <mat-label>Titre</mat-label>
+          <input formControlName="title" name="title" matInput placeholder="Ex: Highway to Hell" required/>
+          <mat-error *ngIf="form.get('title')!.dirty && form.get('title')!.errors?.['required']"><br />Le nom est obligatoire</mat-error>
+          <mat-error *ngIf="form.get('title')!.dirty && form.get('title')!.errors?.['minlength']"><br />Le nom doit avoir au moins 2 caractères </mat-error>
         </mat-form-field>
         <mat-form-field class="name" >
-          <mat-label>Prénom</mat-label>
-          <input formControlName="prenom"  matInput placeholder="Ex: Josephine" name="prenom" required/>
-          <mat-error *ngIf="form.get('prenom')!.dirty && form.get('prenom')!.errors?.['required']"><br />Le prenom est obligatoire</mat-error>
-          <mat-error *ngIf="form.get('prenom')!.dirty && form.get('prenom')!.errors?.['minlength']"><br />Le prenom doit avoir au moins 2 caractères </mat-error>
+          <mat-label>Artiste</mat-label>
+          <input formControlName="artist" matInput placeholder="Ex: AC/DC" name="artist" required/>
+          <mat-error *ngIf="form.get('artist')!.dirty && form.get('artist')!.errors?.['required']"><br />Le prenom est obligatoire</mat-error>
+          <mat-error *ngIf="form.get('artist')!.dirty && form.get('artist')!.errors?.['minlength']"><br />Le prenom doit avoir au moins 2 caractères </mat-error>
         </mat-form-field>
-
-
-
-      </p>
-
-      <p [class.errors]="form.get('sexe')!.invalid && (form.get('sexe')!.dirty || form.get('sexe')!.touched)">
-        <label>Sexe *</label>
-        <mat-radio-group aria-label="Sexe" class="radio-group" name="sexe" formControlName="sexe" required>
-          <mat-radio-button value="M" class="radio-button" >Homme</mat-radio-button>
-          <mat-radio-button value="F" class="radio-button" >Femme</mat-radio-button>
-          <mat-radio-button value="A" class="radio-button" >Autre</mat-radio-button>
-          <mat-error *ngIf="form.get('sexe')!.dirty && form.get('sexe')!.errors?.['required']"><br />Vous devez renseigner le sexe de la personne</mat-error>
-        </mat-radio-group>
       </p>
 
       <p>
-        <mat-form-field>
-          <mat-label><mat-icon>email</mat-icon> Email</mat-label>
-          <input matInput placeholder="Ex: mimie.mathy@gmail.com" style="width:100%" name="email" formControlName="email" required />
-          <mat-error *ngIf="form.get('email')!.dirty && form.get('email')!.errors?.['required']"><br />L'email est obligatoire</mat-error>
+        <mat-form-field class="name" >
+          <mat-label>Description</mat-label>
+          <input matInput placeholder="Description" style="width:100%" name="description" formControlName="description" />
         </mat-form-field>
       </p>
 
-      <p [class.errors]="form.get('telephone')!.invalid && (form.get('telephone')!.dirty || form.get('telephone')!.touched)">
-        <mat-form-field>
-          <mat-label><mat-icon>phone</mat-icon> Téléphone</mat-label>
-          <input  matInput placeholder="Ex: 0612345678" style="width:100%" name="telephone" formControlName="telephone" />
-          <mat-error *ngIf="form.get('telephone')!.dirty && form.get('telephone')!.errors?.['pattern']"><br />Le numéro de téléphone doit comporter 10 chiffres</mat-error>
+      <p>
+        <mat-form-field class="name" >
+          <mat-label>Année de sortie</mat-label>
+          <input matInput placeholder="date" style="width:100%" name="date" formControlName="date" required />
+          <mat-error *ngIf="form.get('date')!.dirty && form.get('date')!.errors?.['required']"><br />L'email est obligatoire</mat-error>
+        </mat-form-field>
+      </p>
+
+      <p>
+        <mat-form-field class="name" >
+          <mat-label>Album</mat-label>
+          <input matInput placeholder="Highway to Hell" style="width:100%" name="album" formControlName="album" required />
+          <mat-error *ngIf="form.get('album')!.dirty && form.get('album')!.errors?.['required']"><br />L'email est obligatoire</mat-error>
+        </mat-form-field>
+      </p>
+
+      <p [class.errors]="form.get('duration')!.invalid && (form.get('duration')!.dirty || form.get('duration')!.touched)">
+        <mat-form-field class="name" >
+          <mat-label><mat-icon>phone</mat-icon> Durée</mat-label>
+          <input  matInput placeholder="Ex: 2:50 min" style="width:100%" name="duration" formControlName="duration" />
+          <mat-error *ngIf="form.get('duration')!.dirty && form.get('duration')!.errors?.['pattern']"><br />Le numéro de téléphone doit comporter 10 chiffres</mat-error>
         </mat-form-field>
       </p>
 
@@ -52,13 +54,13 @@
         <mat-form-field class="chip-list" >
           <mat-label><mat-icon>work</mat-icon> Fonctions :</mat-label>
           <mat-chip-list #chipList aria-label="Intitulés des fonctions de l'employés">
-            <mat-chip *ngFor="let titre of musicModel.title" (removed)="removeChipset(titre)" >
-              {{titre}}
+            <mat-chip *ngFor="let style of musicModel.styles" (removed)="removeChipset(style)" >
+              {{style}}
               <button matChipRemove>
                 <mat-icon>cancel</mat-icon>
               </button>
             </mat-chip>
-            <input placeholder="Ex: Chirurgien..."
+            <input placeholder="Ex: Rock..."
                    [matChipInputFor]="chipList"
                    [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
                    (matChipInputTokenEnd)="addChipset($event)">
