--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
     <mat-icon>menu</mat-icon>
   </button>
   <a [routerLink]="['/']">
-    <img id="logo" src="assets/logo.png" alt="Seattle Grace Hospital Logo">
+    <img id="logo" src="assets/logo.png" alt="Music TP Logo">
   </a>
 
   <span class="example-spacer"></span>
@@ -11,25 +11,25 @@
 
   <langue-bouton></langue-bouton>
 
-  <a href="https://www.facebook.com/marc.petitdemange.5" target="_blank">
+  <a href="https://www.facebook.com/wilfried.rouyer" target="_blank">
     <button mat-icon-button>
       <em class="bi bi-facebook"></em>
     </button>
   </a>
 
-  <a href="https://www.instagram.com/marcusptdmg/" target="_blank">
+  <a href="https://www.instagram.com/https://www.instagram.com/wilfriedrouyer/" target="_blank">
     <button mat-icon-button>
       <em class="bi bi-instagram"></em>
     </button>
   </a>
 
-  <a href="https://www.linkedin.com/in/marc-petitdemange-710424146/" target="_blank">
+  <a href="https://www.linkedin.com/in/wilfried-rouyer-6a7254158/" target="_blank">
     <button mat-icon-button>
       <em class="bi bi-linkedin"></em>
     </button>
   </a>
 
-  <a href="https://github.com/MarcPetitdemange" target="_blank">
+  <a href="https://github.com/wilfriedrouyer/rouyer_tp_note_dev_web" target="_blank">
     <button mat-icon-button>
       <em class="bi bi-github"></em>
     </button>
