--- a/src/app/partage/formulaire/formulaire.component.html
+++ b/src/app/partage/formulaire/formulaire.component.html
@@ -8,14 +8,12 @@
         <mat-form-field class="name" >
           <mat-label>Titre</mat-label>
           <input formControlName="title" name="title" matInput placeholder="Ex: Highway to Hell" required/>
-          <mat-error *ngIf="form.get('title')!.dirty && form.get('title')!.errors?.['required']"><br />Le nom est obligatoire</mat-error>
-          <mat-error *ngIf="form.get('title')!.dirty && form.get('title')!.errors?.['minlength']"><br />Le nom doit avoir au moins 2 caractères </mat-error>
+          <mat-error *ngIf="form.get('title')!.dirty && form.get('title')!.errors?.['required']"><br />Le titre est obligatoire</mat-error>
         </mat-form-field>
         <mat-form-field class="name" >
           <mat-label>Artiste</mat-label>
           <input formControlName="artist" matInput placeholder="Ex: AC/DC" name="artist" required/>
-          <mat-error *ngIf="form.get('artist')!.dirty && form.get('artist')!.errors?.['required']"><br />Le prenom est obligatoire</mat-error>
-          <mat-error *ngIf="form.get('artist')!.dirty && form.get('artist')!.errors?.['minlength']"><br />Le prenom doit avoir au moins 2 caractères </mat-error>
+          <mat-error *ngIf="form.get('artist')!.dirty && form.get('artist')!.errors?.['required']"><br />Le nom de l'artiste est obligatoire</mat-error>
         </mat-form-field>
       </p>
 
@@ -30,7 +28,7 @@
         <mat-form-field class="name" >
           <mat-label>Année de sortie</mat-label>
           <input matInput placeholder="date" style="width:100%" name="date" formControlName="date" required />
-          <mat-error *ngIf="form.get('date')!.dirty && form.get('date')!.errors?.['required']"><br />L'email est obligatoire</mat-error>
+          <mat-error *ngIf="form.get('date')!.dirty && form.get('date')!.errors?.['required']"><br />L'année de sortie est obligatoire</mat-error>
         </mat-form-field>
       </p>
 
@@ -38,7 +36,7 @@
         <mat-form-field class="name" >
           <mat-label>Album</mat-label>
           <input matInput placeholder="Highway to Hell" style="width:100%" name="album" formControlName="album" required />
-          <mat-error *ngIf="form.get('album')!.dirty && form.get('album')!.errors?.['required']"><br />L'email est obligatoire</mat-error>
+          <mat-error *ngIf="form.get('album')!.dirty && form.get('album')!.errors?.['required']"><br />L'album est obligatoire</mat-error>
         </mat-form-field>
       </p>
 
@@ -46,13 +44,13 @@
         <mat-form-field class="name" >
           <mat-label><mat-icon>phone</mat-icon> Durée</mat-label>
           <input  matInput placeholder="Ex: 2:50 min" style="width:100%" name="duration" formControlName="duration" />
-          <mat-error *ngIf="form.get('duration')!.dirty && form.get('duration')!.errors?.['pattern']"><br />Le numéro de téléphone doit comporter 10 chiffres</mat-error>
+          <mat-error *ngIf="form.get('duration')!.dirty && form.get('duration')!.errors?.['required']"><br />La durée est obligatoire</mat-error>
         </mat-form-field>
       </p>
 
       <p>
         <mat-form-field class="chip-list" >
-          <mat-label><mat-icon>work</mat-icon> Fonctions :</mat-label>
+          <mat-label><mat-icon>work</mat-icon> Genres :</mat-label>
           <mat-chip-list #chipList aria-label="Intitulés des fonctions de l'employés">
             <mat-chip *ngFor="let style of musicModel.styles" (removed)="removeChipset(style)" >
               {{style}}
