--- a/src/app/list-music/list-music.component.html
+++ b/src/app/list-music/list-music.component.html
@@ -1,9 +1,9 @@
 <section>
   <span>
     {musics?.length, plural,
-      =0 {Aucun employé trouvé}
-      =1 {1 Employé trouvé}
-      other {{{ musics?.length }} Employés trouvés}}
+      =0 {Aucun musique trouvé}
+      =1 {1 musique trouvée}
+      other {{{ musics?.length }} musiques trouvées}}
   </span>
 </section>
 
